# Crypto-coin

./: ROADMAP.md  community_coin_api_production.rs.txt  community_coin_blockchain.rs (1).txt  constants.toml
community-coin/: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  srcp2p.rs
community-coin/blockchain_state/: db
community-coin/src/: abi.rs  blockchain.rs  lib.rs  light_client.rs  main.rs  p2p.rs  settlement_layer.rs
community-coin/srcs/: vm.rs
community-coin/tests/: e2e_test.rs  integration_test.rs  shared_security_test.rs
example-contract/counter-contract/: Cargo.toml
example-contract/counter-contract/src/: lib.rs
