[package]
name = "community-coin"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
dashmap = "5.5"
sled = "0.34"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
