[package]
name = "community-coin"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
dashmap = "5.5"
sled = "0.34"
chrono = "0.4"
rand = "0.8"
ed25519-dalek = "2.0.0-rc.3"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.13.1"
signature = "2.2.0"
salty = "0.2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
thiserror = "1.0"
anyhow = "1.0"
wasmer = "4.2.4"
serde_bytes = "0.11"
celestia-types = "0.1.0"
celestia-rpc = "0.1.0"
hex = "0.4"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4.18", features = ["derive"] }
tokio-stream = "0.1"
prost = "0.12"
bytes = "1"
async-trait = "0.1"
jsonrpsee = { version = "0.21.0", features = ["full"] }
schnorrkel = "0.10"
merlin = "3.0"
sha3 = "0.10"
subtle = "2.5"
blake2 = "0.10"
zeroize = "1.5"
x25519-dalek = "2.0.0-rc.3"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
hkdf = "0.12"
pbkdf2 = "0.12"
scrypt = "0.11"
argon2 = "0.5"
ed25519-consensus = "2"
bip39 = "2"
tiny-bip39 = "1.0.0"
bs58 = "0.5.0"
bech32 = "0.9.1"
lru = "0.12.1"
cached = "0.47.0"
once_cell = "1.19.0"
lazy_static = "1.4.0"
figment = { version = "0.10.10", features = ["toml", "env"] }
config = "0.13.4"
toml = "0.8.8"
dotenv = "0.15.0"
prometheus = "0.13.3"
actix-web-prom = "0.7.0"
actix-web = "4"
futures-util = "0.3.30"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
itertools = "0.12.0"
num-bigint = "0.4.4"
num-traits = "0.2.17"
rayon = "1.8.0"
crossbeam-utils = "0.8.19"
parking_lot = "0.12.1"
bitflags = "2.4.2"
strum = "0.25.0"
strum_macros = "0.25.3"
pretty_assertions = "1.4.0"
criterion = "0.5.1"
proptest = "1.4.0"
quickcheck = "1.0.3"
test-case = "3.3.1"
tarpc = { version = "0.37.0", features = ["tokio1", "serde-transport"] }
tonic = "0.10.2"
prost-build = "0.12.3"
tower = "0.4.13"
hyper = "0.14.28"
url = "2.5.0"
regex = "1.10.2"
walkdir = "2.4.0"
tempfile = "3.8.1"
memmap2 = "0.9.3"
bincode = "1.3.3"
libp2p = { version = "0.53.2", features = ["full"] }

[[bin]]
name = "sequencer"
path = "src/bin/sequencer.rs"

[[bin]]
name = "full-node"
path = "src/bin/full-node.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"
